--- a/style.css
+++ b/style.css
@@ -3,3 +3,45 @@ body {
   height: 100%;
   margin: 0;
 }
+
+h1 {
+  text-align: center;
+}
+
+
+
+img {
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+}
+
+
+ nav a {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: #a81f88;
+  color: hwb(0 94% 0%);
+  }
+header nav {
+text-align: center;
+}
+
+ figcaption {
+  font-size: 15px;
+  text-align: center;
+ }
+ .island {
+  max-width: 800px;
+  min-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  padding :15px;
+
+ }
+ div {
+  float: left;
+  width: 25%;
+  background-color:chocolate ;
+ }
